Update java version to 11